# RetailCare-Orchestrator

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BUSINESS_RULES.md  Dockerfile  Makefile  OPERATIONS_MANUAL.md  README.md  RetailCare_Orchestrator_项目定义_v1.md  docker-compose.yml  pyproject.toml  requirements.txt  retailcare_checkpoints.db-shm  retailcare_checkpoints.db-wal
.github/workflows/: ci.yml
docs/: state-and-security-upgrade.md  改进对比与新架构.md
docs/interview/: 01_可控性_STAR_面试稿.md  02_安全性_STAR_面试稿.md  03_评估体系_STAR_面试稿.md  技术难点与经验沉淀.md
docs/learning/: README.md  decisions.md  developer-build-log.md  glossary.md  improvement-ideas.md  learning-method.md  progress.md  project-map.md  promotion-policy.md  questions.md  roadmap.md
eval/: __init__.py  _env.py  bfcl.py  common.py  error_taxonomy.py  hitl_eval.py  judge.py  metrics.py  multiturn.py  regression.py  runner.py  security.py
eval/datasets/: bfcl_style.jsonl  multiturn_tasks.jsonl  refund_tasks.jsonl  security_tasks.jsonl
eval/experiments/: pareto.py  run_ablations.py
learning_lab/: .gitignore  README.md
learning_lab/modules/: README.md
reports/: ablation_report.md  baseline_report.md  bfcl_report.md  demo_transcript.md  error_taxonomy.md  hitl_report.md  multiturn_report.md  pareto_report.md  security_report.md
tests/: test_api.py  test_clock.py  test_faults.py  test_hitl.py  test_mcp.py  test_memory.py  test_metrics.py  test_prompts.py  test_runtime.py  test_security.py  test_smoke.py  test_state.py  test_tools.py  test_trace.py  test_trace_store.py
web/: index.html
(+47 files in other folders)
